--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/dotenv": "^6.1.1",
     "@types/mongodb": "^3.1.27",
     "@types/nodemailer": "^6.1.0",
+    "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.9.1",
